--- a/source/res/values/strings.xml
+++ b/source/res/values/strings.xml
@@ -7,10 +7,41 @@
     <string name="title_section3">Section 3</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_example">Example action</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_viewmode">View mode</string>
+    <string name="settings">Settings</string>
 
-    <string name="total_size">Total</string>
-    <string name="use_size">Used</string>
-    
+    <string name="copy">copy</string>
+    <string name="move">Move</string>
+    <string name="rename">Rename</string>
+    <string name="new_folder">New Folder</string>
+    <string name="view">View</string>
+    <string name="favorite">Favorite</string>
+    <string name="share">Share</string>
+    <string name="refresh">Refresh</string>
+    <string name="file_search">File Search</string>
+    <string name="preference">Preference</string>
+    <string name="local">Local</string>
+    <string name="sdcard">SDCARD</string>
+    <string name="total">Total</string>
+    <string name="free_space">Free Space</string>
+    <string name="favorite_folder">Favorite Folder</string>
+    <string name="items">items</string>
+    <string name="selected">selected</string>
+    <string name="copying">Copy..</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
+    <string name="alert">Alert</string>
+    <string name="all">All</string>
+    <string name="save">Save</string>
+    <string name="make">make</string>
+    <string name="list">List</string>
+    <string name="icon">Icon</string>
+    <string name="thumbnail">Thumbnail</string>
+    <string name="delete_all">Delete all</string>
+    <string name="version">Version</string>
+    <string name="language">Language</string>
+    <string name="saved_last_folder">Saved last folder</string>
+    <string name="select_theme">Select Theme</string>
+    <string name="select_items">Select Items</string>
+    <string name="sort">Sort</string>
 </resources>
